<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rooms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".rooms">

    <Button
        android:id="@+id/rbtn"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:background="@color/butc"
        android:fontFamily="serif"
        android:text="@string/btbtr"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="148dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/onebed" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="148dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/twobed" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="148dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
        app:srcCompat="@drawable/threebed" />

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="148dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816"
        app:srcCompat="@drawable/fourbed" />

    <TextView
        android:id="@+id/srh"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:fontFamily="cursive"
        android:text="@string/sr"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/srds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/iv1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/srds"
        android:layout_width="198dp"
        android:layout_height="46dp"
        android:fontFamily="monospace"
        android:text="@string/srd"
        android:textAlignment="center"
        android:textColor="@color/txc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toEndOf="@+id/iv1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/drh"
        android:layout_width="112dp"
        android:layout_height="34dp"
        android:fontFamily="cursive"
        android:text="@string/dr"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/drds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toEndOf="@+id/iv2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/drds"
        android:layout_width="194dp"
        android:layout_height="47dp"
        android:fontFamily="monospace"
        android:text="@string/drd"
        android:textAlignment="center"
        android:textColor="@color/txc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toEndOf="@+id/iv2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <TextView
        android:id="@+id/trh"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:fontFamily="cursive"
        android:text="@string/tr"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/trds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toEndOf="@+id/iv3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/trds"
        android:layout_width="209dp"
        android:layout_height="64dp"
        android:fontFamily="monospace"
        android:text="@string/trd"
        android:textAlignment="center"
        android:textColor="@color/txc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/iv3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/qrh"
        android:layout_width="153dp"
        android:layout_height="31dp"
        android:fontFamily="cursive"
        android:text="@string/qr"
        android:textColor="@color/rh"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/qrds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/qrds"
        android:layout_width="195dp"
        android:layout_height="65dp"
        android:fontFamily="monospace"
        android:text="@string/qrd"
        android:textAlignment="center"
        android:textColor="@color/txc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/iv4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <TextView
        android:id="@+id/srpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007BFF"
        android:text="@string/srp"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/iv1"
        app:layout_constraintTop_toBottomOf="@+id/srds"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/drpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007BFF"
        android:text="@string/drp"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drds"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/trpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007BFF"
        android:text="@string/trp"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trds"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/qrpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007BFF"
        android:text="@string/qrp"
        android:textColor="@color/lbtc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrds"
        app:layout_constraintVertical_bias="0.033" />


</androidx.constraintlayout.widget.ConstraintLayout>